--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/moussaka.html">Moussaka Recipe</a>
+        <p>My favorite recipes:</p>
+        <ul>
+         <li><a href="recipes/moussaka.html">Moussaka Recipe</a></li>
+         <li><a href="recipes/chickenTeriyaki.html">Chicken Teriyaki</a></li>
+         <li><a href="recipes/spaghettiAglioeOlio.html">Spaghetti Aglio e Olio</a></li>
+        </ul>
     </body>
 </html>
